--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 01:05:02 2018</p>
+         Last Run: Fri Nov 30 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>36</td>
-                        <td>76</td>
+                        <td>32</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -48,7 +48,7 @@
                         <td>31</td>
                         <td>73</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>N</td>
                         <td>98</td>
                      </tr>
@@ -57,8 +57,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>38</td>
-                        <td>75</td>
+                        <td>40</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "36",
+                 "32",
                  "31",
-                 "38"
+                 "40"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
+                 "75",
                  "73",
-                 "75"
+                 "74"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 01:05:02 2018</p>
+         Last Run: Fri Nov 30 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>78</td>
                         <td>0</td>
                         <td>14</td>
@@ -260,23 +260,23 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>46</td>
-                        <td>75</td>
+                        <td>47</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>N</td>
-                        <td>95</td>
+                        <td>NNW</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>39</td>
+                        <td>40</td>
                         <td>71</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>N</td>
+                        <td>NNW</td>
                         <td>95</td>
                      </tr>
                   </tbody>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "52",
-                 "46",
-                 "39"
+                 "53",
+                 "47",
+                 "40"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "78",
-                 "75",
+                 "74",
                  "71"
                ]
              },
@@ -398,7 +398,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "97",
-                 "95",
+                 "96",
                  "95"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 01:05:02 2018</p>
+         Last Run: Fri Nov 30 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 01:05:02 2018</p>
+         Last Run: Fri Nov 30 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,9 +679,9 @@
                         <td>-12</td>
                         <td>-17</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
                         <td>49</td>
                      </tr>
@@ -689,12 +689,12 @@
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-13</td>
-                        <td>-18</td>
+                        <td>-19</td>
                         <td>4</td>
                         <td>72</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>WNW</td>
+                        <td>10</td>
+                        <td>W</td>
                         <td>51</td>
                      </tr>
                      <tr>
@@ -703,7 +703,7 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-17",
-                 "-18",
+                 "-19",
                  "-19"
                ]
              },
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "71",
                  "72",
-                 "72",
-                 "74"
+                 "73"
                ]
              },
              {
