--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 02:05:02 2018</p>
+         Last Run: Fri Nov 30 03:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -30,11 +30,11 @@
                   <tbody>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>32</td>
-                        <td>75</td>
+                        <td>24</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -42,10 +42,10 @@
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>31</td>
+                        <td>24</td>
                         <td>73</td>
                         <td>0</td>
                         <td>11</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>98</td>
+                        <td>97</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
-                 "31",
+                 "24",
+                 "24",
                  "40"
                ]
              },
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
+                 "76",
                  "73",
                  "74"
                ]
@@ -184,7 +184,7 @@
                "data":[
                  "97",
                  "98",
-                 "98"
+                 "97"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 02:05:02 2018</p>
+         Last Run: Fri Nov 30 03:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>53</td>
-                        <td>78</td>
+                        <td>50</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -260,20 +260,20 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>47</td>
-                        <td>74</td>
+                        <td>46</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>96</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>40</td>
-                        <td>71</td>
+                        <td>32</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "53",
-                 "47",
-                 "40"
+                 "50",
+                 "46",
+                 "32"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "74",
-                 "71"
+                 "79",
+                 "75",
+                 "72"
                ]
              },
              {
@@ -398,7 +398,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "97",
-                 "96",
+                 "95",
                  "95"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 02:05:02 2018</p>
+         Last Run: Fri Nov 30 03:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Partly Cloudy</td>
                         <td>-9</td>
                         <td>-13</td>
-                        <td>7</td>
-                        <td>79</td>
+                        <td>6</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>55</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-9</td>
                         <td>-13</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>53</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>7</td>
-                        <td>81</td>
+                        <td>6</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>51</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
-                 "7"
+                 "6",
+                 "6",
+                 "6"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "80",
                  "79",
-                 "79",
-                 "81"
+                 "80"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "53",
-                 "51"
+                 "45",
+                 "26",
+                 "15"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 02:05:02 2018</p>
+         Last Run: Fri Nov 30 03:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-12</td>
-                        <td>-17</td>
-                        <td>4</td>
-                        <td>71</td>
+                        <td>Clear</td>
+                        <td>-13</td>
+                        <td>-18</td>
+                        <td>5</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WNW</td>
-                        <td>49</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-13</td>
-                        <td>-19</td>
-                        <td>4</td>
-                        <td>72</td>
+                        <td>Clear</td>
+                        <td>-14</td>
+                        <td>-20</td>
+                        <td>5</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>51</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-14</td>
-                        <td>-19</td>
-                        <td>4</td>
-                        <td>73</td>
+                        <td>Clear</td>
+                        <td>-15</td>
+                        <td>-20</td>
+                        <td>5</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>51</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-17",
-                 "-19",
-                 "-19"
+                 "-18",
+                 "-20",
+                 "-20"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-12",
                  "-13",
-                 "-14"
+                 "-14",
+                 "-15"
                ]
              }
            ]
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "5",
+                 "5",
+                 "5"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "72",
-                 "73"
+                 "76",
+                 "78",
+                 "81"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "51",
-                 "51"
+                 "11",
+                 "11",
+                 "10"
                ]
              }
            ]
