--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 04:05:02 2018</p>
+         Last Run: Fri Nov 30 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>24</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>96</td>
+                        <td>99</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>24</td>
+                        <td>39</td>
                         <td>73</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
-                        <td>98</td>
+                        <td>99</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>41</td>
-                        <td>74</td>
+                        <td>43</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>98</td>
+                        <td>99</td>
                      </tr>
                   </tbody>
                </table>
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "24",
-                 "41"
+                 "39",
+                 "43"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
+                 "76",
                  "73",
-                 "74"
+                 "75"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
-                 "98",
-                 "98"
+                 "99",
+                 "99",
+                 "99"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 04:05:02 2018</p>
+         Last Run: Fri Nov 30 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,15 +253,15 @@
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>99</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-4</td>
-                        <td>-9</td>
+                        <td>-5</td>
+                        <td>-10</td>
                         <td>48</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-10",
-                 "-9",
+                 "-10",
                  "-9"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-5",
-                 "-4",
+                 "-5",
                  "-4"
                ]
              }
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "74",
+                 "75",
                  "72"
                ]
              },
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "99",
+                 "98",
                  "98",
                  "98"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 04:05:02 2018</p>
+         Last Run: Fri Nov 30 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -466,9 +466,9 @@
                         <td>6</td>
                         <td>80</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>WNW</td>
-                        <td>41</td>
+                        <td>6</td>
+                        <td>W</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,11 +476,11 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>6</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>24</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "78",
+                 "79",
                  "80"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
-                 "24",
-                 "14"
+                 "43",
+                 "25",
+                 "15"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 04:05:02 2018</p>
+         Last Run: Fri Nov 30 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -677,11 +677,11 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-13</td>
-                        <td>-19</td>
+                        <td>-18</td>
                         <td>5</td>
                         <td>75</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WNW</td>
                         <td>11</td>
                      </tr>
@@ -695,7 +695,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-19",
+                 "-18",
                  "-20",
                  "-20"
                ]
@@ -828,7 +828,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "11",
-                 "10",
+                 "11",
                  "10"
                ]
              }
